--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#https端口号.
+#server.port: 443
+##证书的路径.
+#server.ssl.key-store: classpath:static/keystore.p12
+##证书密码，请修改为您自己证书的密码.
+#server.ssl.key-store-password: admin12
+##秘钥库类型
+#server.ssl.keyStoreType: PKCS12
+##证书别名
+#server.ssl.keyAlias: tomcat
