--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+		<dependency>
+		    <groupId>com.google.firebase</groupId>
+		    <artifactId>firebase-admin</artifactId>
+		    <version>6.12.2</version>
+		</dependency>
+        
 	</dependencies>
 
 
