--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mydb?characterEncoding=utf8
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+logging.level.root=info
 
+security.oauth2.client.client-id=demo
+security.oauth2.client.client-secret=demoSecret
+#server.servlet.session.timeout=5
 #https端口号.
 #server.port: 443
 ##证书的路径.
@@ -11,3 +18,5 @@ spring.mvc.view.suffix=.jsp
 #server.ssl.keyStoreType: PKCS12
 ##证书别名
 #server.ssl.keyAlias: tomcat
+
+spring.thymeleaf.cache=false
